meetily-audio/tests/compile-fail/cannot_construct_externally.stderr
error[E0451]: fields `source`, `samples` and `timestamp_ms` of struct `TranscriptionFrame` are private
  --> tests/compile-fail/cannot_construct_externally.rs:11:9
   |
10 |     let _ = TranscriptionFrame {
   |             ------------------ in this type
11 |         source: SourceLabel::Mic,
   |         ^^^^^^ private field
12 |         samples: vec![0.0; 160],
   |         ^^^^^^^ private field
13 |         timestamp_ms: 0,
   |         ^^^^^^^^^^^^ private field
